// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts test > Snapshot of comparison results 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 97.67 kB (🟢 -2.33 kB) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;

exports[`ts test > Vite comparison results test 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 60.14 kB (🟢 -39.86 kB) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;

exports[`ts test > comparison results test 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 97.67 kB (🟢 -2.33 kB) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;
